k8s/overlays/aks/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biblioteca-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: bibliotechu.duckdns.org
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 5132
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 5132
          - path: /api/roles
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 5132
          - path: /api/demo
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 5132
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 5132
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 5132
          - path: /api/catalog
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 3002
          - path: /api/chatbot
            pathType: Prefix
            backend:
              service:
                name: chatbot-service
                port:
                  number: 3003
  tls:
    - hosts:
        - bibliotechu.duckdns.org
      secretName: bibliotechu-backend-tls
